# joplin-web

./: Dockerfile  README.md  docker-compose.yml  docker-start.sh  manage.py  requirements-dev.txt  requirements.txt  setup.cfg
joplin-vue/: package-lock.json  package.json  vue.config.js
joplin-vue/src/modules/notes/components/: Notes.vue  TakeNote.vue
joplin_web/: __init__.py  api.py  apps.py  asgi.py  env.sample  forms.py  settings.py  urls.py  utils.py  views.py  wsgi.py
joplin_web/static/css/: chunk-vendors.css
joplin_web/static/js/: app.js  app.js.map  chunk-vendors.js
joplin_web/templates/: folders_child_list.html  folders_list.html  index.html  notes_list.html  tags_list.html  take_note.html
joplin_web/templatetags/: joplin_web_extras.py
