[metadata]
name=joplin-web
description=":snake: :books: Web application companion for Joplin"
author=폭스마스크
author_email=foxmask@protonmail.com
version=attr: joplin_web.__version__
url=https://github.com/foxmask/joplin-web
download_url="https://github.com/foxmask/joplin-web/archive/joplin-web-" + version + ".zip"
packages=find_packages()
long_description = file: README.md
long_description_content_type = text/markdown
license= BSD License
keywords=django, joplin, joplin-api, python3

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet


[options]
zip_safe=false

include_package_data=true

install_requires=

    arrow==0.17.0
    Django==3.1.2
    django-environ==0.4.5
    joplin-api==1.6.0
    rich==9.0.0


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=migrations,*settings*.py,.tox,build,from_*
